# aitao

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RESUME_SESSION.md  SECURITY.md  SESSION_SUMMARY_JAN27.md  VALIDATE_ALL.sh  aitao-v2.sh  aitao.sh  aitao_cli.py  install.sh  pyproject.toml  requirements-stable.txt  requirements.txt
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: release.yml
archive/docker-deprecated/: Dockerfile
config/: aitao-nginx.conf  config.toml.template  config.yaml  config.yaml.template  system_prompt.txt
config/modelfiles/: llama3.1.Modelfile  qwen2.5-coder.Modelfile  qwen3-vl.Modelfile
data/: schema.sql
docker/: .env.template  README.md  docker-compose.yml  install-aitao.bat  install-aitao.sh  uninstall-aitao.bat  uninstall-aitao.sh
docs/: CLI_USAGE.md  CONTINUE_SETUP.md  DEVELOPMENT_CHECKLIST.md  INSTALLATION.md  MIGRATION_MODELS.md  MODELS.md  ONLYOFFICE_INTEGRATION.md  PLAN_ACTIONS_2026.md  SUMMARY_US021b.md  US-021b-ModelManager.md
logo/: aitao-logo.af  aitao-logo.af~lock~
portable/: .gitignore
portable/amd64/: requirements-portable.txt  setup-portable.ps1  setup.bat  start-aitao.ps1  start.bat  update-aitao.ps1  update.bat
portable/arm64/: requirements-portable.txt  setup-portable.ps1  setup.bat  stop-aitao.ps1  stop.bat  uninstall-aitao.ps1  uninstall.bat  update-aitao.ps1
prd/: AITAO-006-IMPLEMENTATION.md  ARCHITECTURE.md  BACKLOG-TODO.md  BACKLOG.md  BUG_FIXES_REPORT.md  CLEANUP_PLAN.md  COHERENCE_ANALYSE.md  DIAGNOSTIC_SYNC_AGENT_DIY.md  PRD-V2.md  PRD.md  PROJECT_STATUS.md  SPRINT_FANTOME_REPORT.md
prd/archive_v1/: AUDIT_ARCHITECTURE_OCR.md  AUDIT_ETAT_REEL_QWEN.md  BACKLOG.md  DiagrammesFlux.txt  INCOHERENCES.md  PLAN_ACTION_QWEN_OCR.md  PRD.md
scripts/: QUICK_TEST.sh  bench_paddle_ocr.py  bench_qwen_vl_mmproj.py  benchmark_backends.py  benchmark_indexing.py  benchmark_mlx.py  benchmark_ocr.py  benchmark_results.json  check_contracts.py  check_deps.py  check_indexed_doc.py  check_queue.py  check_rag_content.py  check_src_path.py  check_system.py  check_system_compatibility.py  clean_empty_docs.py  db_dump.txt  debug_db_schema.py  debug_lancedb.py  download-model.py  fix_ollama_templates.py  fix_python314.py  get_config_env.py  index_volumes.py  manage_failed_files.py  reindex_chunks.py  reset_aitao.py  run_worker.py  scan_folder.py  setup_settings.py  test_chat_rag.py  test_core_services.sh  test_critical_bugs.sh  test_easyocr.py  test_imports.py  test_qwen_ocr.py  test_qwen_proper.py  test_qwen_vision.py
src/api/: __init__.py  (+3 more)
tests/: conftest.py  test_chat_api.py  test_cli.py  test_cli_chat.py  test_lifecycle_commands.py  test_models_api.py
(+118 files in other folders)
